@@ -1,5 +1,11 @@
 partitioner (0.22) UNRELEASED; urgency=low
 
+  * Martin Michlmayr
+    - Handle mips sub-architectures: use fdisk for SGI machines, cfdisk for
+      the Broadcom MIPS development board "SWARM" (BCM91250A), and fdisk
+      as fallback option.
+    - Add a script to handle mipsel sub-architectures: use fdisk for
+      DECstations, cfdisk for the SWARM board, and fdisk as fallback.
   * Translators: do not modify this changelog to record changes you make to
     po files. A record of your contributions will be added to the changelog
     at package release time by the output-l10n-changes program.
